Link Psalm-25 video

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -131,3 +131,5 @@ psalm-23:
   videoSrc: https://www.youtube.com/embed/rXq87rIyR_k
 psalm-24:
   videoSrc: https://www.youtube.com/embed/KZqZFkJez94
+psalm-25: 
+  videoSrc: https://www.youtube.com/embed/u6ov41WpvxA
