Add psalm26 videoSrc

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -133,3 +133,5 @@ psalm-24:
   videoSrc: https://www.youtube.com/embed/KZqZFkJez94
 psalm-25: 
   videoSrc: https://www.youtube.com/embed/u6ov41WpvxA
+psalm-26:
+  videoSrc: https://www.youtube.com/embed/IWIY9neUonY
