fix(video): add psalm-27-8 videoSrc

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -131,7 +131,11 @@ psalm-23:
   videoSrc: https://www.youtube.com/embed/rXq87rIyR_k
 psalm-24:
   videoSrc: https://www.youtube.com/embed/KZqZFkJez94
-psalm-25: 
+psalm-25:
   videoSrc: https://www.youtube.com/embed/u6ov41WpvxA
 psalm-26:
   videoSrc: https://www.youtube.com/embed/IWIY9neUonY
+psalm-27:
+  videoSrc: https://www.youtube.com/embed/x3okeL_cAE4
+psalm-28:
+  videoSrc: https://www.youtube.com/embed/MOSCmY5UxeA
