feat: add up to psalm-150

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -139,3 +139,9 @@ psalm-27:
   videoSrc: https://www.youtube.com/embed/x3okeL_cAE4
 psalm-28:
   videoSrc: https://www.youtube.com/embed/MOSCmY5UxeA
+psalm-29:
+  videoSrc: https://www.youtube.com/embed/fHa_1I9sO0w
+psalm-30:
+  videoSrc: https://www.youtube.com/embed/ltGB-Yt03bY
+psalm-31:
+  videoSrc: https://www.youtube.com/embed/eEZ3mSG3K5Y
