--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -1,5 +1,5 @@
 Faith:
-  Heroic Acts of the Faith:
+  Heroic Acts of the Faith / Trust:
     - Noah's faith before the Flood - Genesis 6: genesis-6
     - Abraham's faith in Isaac's sacrifice - Genesis 22: genesis-22
     - Joseph's faith in prison - Genesis 40: genesis-40
@@ -19,6 +19,7 @@ Faith:
     - Transforming doubt into faith - Psalm 73: psalm-73
     - Trusting God’s Holy Scripture - Psalm 119: psalm-119
     - Trusting God during government oppression - Psalm 125: psalm-125
+    - The blessings of faith in Jesus - Psalm 140: psalm-140
   Patience:
     - Abraham's 100-year wait for God's promised son - Genesis 21: genesis-21
     - Isaac's 20-year wait for his promised son - Genesis 25: genesis-25
@@ -26,7 +27,7 @@ Faith:
     - Joshua's patience in waiting on God - Exodus 33: exodus-33
     - Being patient for God's timing - Deuteronomy 7: deuteronomy-7
     - Hannah waits on God's promise - Samuel 1: 1-samuel-1
-    - Samuel instructed Saul 7 days to wait to be king - 1 Samuel 10: 1-samuel-10
+    - Saul forced to wait to become king - 1 Samuel 10: 1-samuel-10
     - Elijah forced to wait on God's timing - 1 Kings 17: 1-kings-17
     - Hezekiah's failure to wait on God's timing - 2 Kings 18: 2-kings-18
     - Waiting on God during times of trouble - Psalm 62: psalm-62
@@ -50,18 +51,21 @@ Faith:
     - Elijah tests Elisha before his rapture - 2 Kings 2: 2-kings-2
     - Job's testing (Part I) - Job 1: job-1
     - Job's testing (Part II) - Job 2: job-2
-    - What God offers during your testing and trials (Part I) - Psalm 13: psalm-13
-    - What God offers during your testing and trials (Part II)- Psalm 25: psalm-25
-    - Maintaining your faith during a trial - Psalm 31: psalm-31
-    - Turning to God during your trials - Psalm 57: psalm-57
-    - How to approach God during a trial - Psalm 59: psalm-59
-    - Finding satisfaction in God during a trial - Psalm 63: psalm-63
-    - What Jesus offers during a trial - Psalm 69: psalm-69
-    - Turning to Jesus during a trial - Psalm 70: psalm-70
-    - Turning to God to overcome a trial - Psalm 74: psalm-74
-    - What God offers during a trial - Psalm 86: psalm-86
-    - Lessons from David for surviving your trials - Psalm 108: psalm-108
-  Hope and Comfort During Death, Suffering or Tragedy:
+  Trials:
+    - Turning to God during your trials (Part I) - Psalm 13: psalm-13
+    - Turning to God during your trials (Part II) - Psalm 25: psalm-25
+    - Turning to God during your trials (Part III) - Psalm 31: psalm-31
+    - Turning to God during your trials (Part IV) - Psalm 57: psalm-57
+    - Turning to God during your trials (Part V) - Psalm 59: psalm-59
+    - Turning to God during your trials (Part VI) - Psalm 63: psalm-63
+    - Turning to God during your trials (Part VII) - Psalm 69: psalm-69
+    - Turning to God during your trials (Part VIII) - Psalm 70: psalm-70
+    - Turning to God during your trials (Part IX) - Psalm 74: psalm-74
+    - Turning to God during your trials (Part X) - Psalm 86: psalm-86
+    - Turning to God during your trials (Part XI) - Psalm 108: psalm-108
+    - Turning t- God during your trials (Part XII) - Psalm 129: psalm-129
+    - Turning to God during your trials (Part XIII) - Psalm 139: psalm-139
+  Hope and Comfort During Death, Suffering, or Tragedy:
     - Eternal hope following Sara's death - Genesis 23: genesis-23
     - Jacob's request to be buried in the Promised Land - Genesis 47: genesis-47
     - Eternal hope following Joseph's death - Genesis 50: genesis-50
@@ -87,6 +91,9 @@ Faith:
     - What Jesus offers during a crisis - Psalm 102: psalm-102
     - Finding hope in Jesus after you sin - Psalm 106: psalm-106
     - Turning to God when you are afflicted - Psalm 123: psalm-123
+    - Finding hope in uncertain times - Psalm 131: psalm-131
+    - Finding hope in Jesus' unfulfilled promises - Psalm 132: psalm-132
+    - Finding hope in Jesus when you feel depressed - Psalm 142: psalm-142
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
     - God transforms Abraham and Sara - Genesis 17: genesis-17
@@ -99,7 +106,7 @@ Spiritual Renewal:
     - Signs of a transformed believer - Leviticus 19: leviticus-19
     - Spiritual renewal through God's holy days - Numbers 28:1-15: numbers-28.1-15
     - Joshua leads a spiritual renewal - Joshua 6: joshua-6
-    - God transform Naomi's bitter heart - Ruth 2: ruth-2
+    - God transforms Naomi's bitter heart - Ruth 2: ruth-2
     - Stages of a believer's transformation - 1 Samuel 10: 1-samuel-10
     - Lessons on spiritual renewal from David's wilderness victory - 1 Samuel 30: 1-samuel-30
     - God's transformation of the leper Naaman - 2 Kings 5: 2-kings-5
@@ -113,8 +120,9 @@ Spiritual Renewal:
     - Spiritual warfare lessons from the Book of Esther - Esther 4: esther-4
     - The stages of spiritual renewal / restoration - Job 42: job-42
     - Signs of a transformed believer (Part I) - Psalm 15: psalm-15
-    - Signs of a transformed believer (Part I) - Psalm 16: psalm-16
+    - Signs of a transformed believer (Part II) - Psalm 16: psalm-16
     - Lessons for a nation’s spiritual revival and restoration - Psalm 85: psalm-85
+    - Lessons on spiritual revival from Israel's restoration - Psalm 126: psalm-126
   Humility / Meekness:
     - Jacob's humility before God - Genesis 31: genesis-31
     - Moses' humility before God - Numbers 11: numbers-12
@@ -157,7 +165,7 @@ Spiritual Renewal:
     - Lessons for maintaining God's fellowship - Leviticus Ch. 5:1-6:7: leviticus-5.1-6.7
     - Rules for restoring fellowship with God after sin - Numbers 15: numbers-15
     - God's plan for fellowship through His Word - 2 Samuel 7: 2-samuel-7
-    - God's delights in your fellowship - 2 Samuel 22: 2-samuel-22
+    - God's delight in your fellowship - 2 Samuel 22: 2-samuel-22
     - Lessons on the restoration of God's fellowship - 1 Kings 7: 1-kings-7
     - Lessons on finding fellowship with God from David - 1 Chronicles 15: 1-chronicles-15
     - Signs of a person walking in faithful fellowship with God -1 Chronicles 28: 1-chronicles-28
@@ -216,7 +224,9 @@ Discipleship:
     - Naaman's faith-led obedience leads to healing - 2 Kings 5: 2-kings-5
     - Lessons from Hezekiah on maintaining obedience - 2 Kings 18: 2-kings-18
     - Josiah ruled as Judah's most obedient king - 2 Kings 23: 2-kings-23
-    - God’s blessings when you are obedient - Psalm 112: psalm-112
+    - God's blessings when you are obedient (Part I) - Psalm 112: psalm-112
+    - God's blessings when you are obedient (Part II) - Psalm 127: psalm-127
+    - God's blessings when you are obedient (Part III) - Psalm 128: psalm-128
   Keeping Vows:
     - God's laws regarding vows  - Leviticus 27: leviticus-27
     - God's laws regarding vows  - Numbers 30: numbers-30
@@ -262,24 +272,21 @@ Relationships:
     - Boaz courtship of Ruth - Ruth 3: ruth-3
     - Abigail's inner beauty - 1 Samuel 25: 1-samuel-25
   Marriage:
-    - God's law against adultery	- Deuteronomy 5:18: deuteronomy-5.18
+    - God's law against adultery - Deuteronomy 5:18: deuteronomy-5.18
     - Abraham lies and places his marriage at risk - Genesis 20: genesis-20
     - Jacob's polygamy creates marriage jealousy - Genesis 30: genesis-30
     - Divorce for hardened hearts - Deuteronomy 24: deuteronomy-24
     - David's adultery with Bathsheba - 2 Samuel 11: 2-samuel-11
-    - David ends his relationship with his concubines - 2 Sam. 20: 2-samuel-20
-    - Solomon's 1,000 wives  - 1 Kings 11: 1-kings-11
-    - Elkanah's polygamy creates family jealousy - 1 Sam. 1: 1-samuel-1
-  Raising Children:
-    - The Commandment to honor parents - Dt. Chapter 5:16: deuteronomy-5.16
-    - Jacob's ungodly parenting  - Genesis 34: genesis-34
+    - David ends his relationship with his concubines - 2 Samuel 20: 2-samuel-20
+    - Solomon's 1,000 wives - 1 Kings 11: 1-kings-11
+    - Elkanah's polygamy creates family jealousy - 1 Samuel 1: 1-samuel-1
+    - The fear of God leads to a blessed marriage - Psalm 128: psalm-128
     - Jacob purifies his family - Genesis 35: genesis-35
     - Jacob's creates jealousy with his sons - Genesis 37: genesis-37
-    - Judah's ungodly parenting  - Genesis 38: genesis-38
-    - Joseph's forgiveness brings family peace -  Genesis 45: genesis-45
+    - Judah's ungodly parenting - Genesis 38: genesis-38
+    - Joseph's forgiveness brings family peace - Genesis 45: genesis-45
     - Joseph's rules for family separation - Genesis 47: genesis-47
     - God's law against abortion - Leviticus 20: leviticus-20
-    - Teaching God's Word to your children  - Deuteronomy 11: deuteronomy-11
     - Disciplining rebellious children - Deuteronomy 21: deuteronomy-21
     - Joshua's command to teach your children - Joshua 4: joshua-4
     - Failing to raise children in the Lord leads to rebellion - Judges 2: judges-2
@@ -322,6 +329,7 @@ Relationships:
     - Lessons from Job on grief counseling (Part III) - Job 11: job-11
     - Turning to God when you feel depressed (Part I) - Psalm 77: psalm-77
     - Turning to God when you feel depressed (Part II) - Psalm 88: psalm-88
+    - Turning to God when you feel depressed (Part III) - Psalm 142: psalm-142
 Service:
   Love and Compassion:
     - Abraham's compassion for strangers - Genesis 18: genesis-18
@@ -390,8 +398,9 @@ Leadership:
     - Warnings from Saul about selecting leaders - 1 Samuel 9: 1-samuel-9
     - Lessons from David on selecting leaders - 1 Chronicles 27: 1-chronicles-27
     - Lessons from Ezra's selection on effective leadership - Ezra 7: ezra-7
-  Church Growth:
+  Church Growth / Unity:
     - Lessons from the wilderness census on Church growth - Numbers 26: numbers-26
+    - Achieving God's intended Church unity - Psalm 133: psalm-133
   Rebellious leaders:
     - Rebellion against God's appointed leaders - Numbers 16: numbers-16
     - Warnings regarding leadership from the Judges - Judges 12: judges-12
@@ -461,6 +470,11 @@ Worship:
     - Developing a heart for worship - Psalm 111: psalm-111
     - Praising Jesus for His deliverance - Psalm 113: psalm-113
     - Praising God when you are attacked - Psalm 124: psalm-124
+    - Lessons for a worship life that honors God - Psalm 134: psalm-134
+    - Developing a heart of lasting gratitude - Psalm 138: psalm-138
+    - Lessons for properly worshiping Jesus (Part I) - Psalm 145: psalm-145
+    - Lessons for properly worshiping Jesus (Part II) - Psalm 146: psalm-146
+    - Praising Jesus for as long as you have breath - Psalm 150: psalm-150
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
     - Spiritual warfare lessons from the wilderness - Numbers 1:5-16: numbers-1.5-16
@@ -477,7 +491,8 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Nehemiah (Part XII) - Nehemiah 4: nehemiah-4
     - Spiritual warfare lessons from Nehemiah (Part XIII) - Nehemiah 6: nehemiah-6
     - Spiritual warfare in the Book of Esther - Esther 4: esther-4
-    - Turning spiritual setbacks into victories - Psalm 60: psalm-60
+    - Turning spiritual setbacks into victories (Part XIV) - Psalm 60: psalm-60
+    - Spiritual warfare lessons from David (Part XV) - Psalm 144: psalm-144
 Stewardship:
   Lessons on Tithing:
     - "Abraham's tithes - Genesis 14": genesis-14
@@ -514,15 +529,26 @@ Jesus in the Old Testament:
     - Jesus appears to Joshua - Joshua 5: joshua-5
     - Jesus appears to Gideon - Judges 6: judges-6
     - Jesus appears to Samson's parents - Judges 13: judges-13
-    - The foreshadow of Jesus in the gates of Jerusalem - Nehemiah 3: nehemiah-3
-    - The foreshadow of Jesus as the Suffering Servant - Psalm 22: psalm-22
-    - The foreshadow of Jesus as the Good Shepherd - Psalm 23: psalm-23
-    - The foreshadow of Jesus as the King of Glory - Psalm 24: psalm-24
-    - The foreshadow of Jesus as the King of Kings - Psalm 72: psalm-72
-    - The foreshadow of Jesus as the promised Messiah - Psalm 110: psalm-110
-    - The foreshadow of Jesus’ universal offer of salvation - Psalm 117: psalm-117
+  The Foreshadow of Jesus’ Names / Titles:
+    - Jesus the great I AM - Exodus 3: exodus-3
+    - Jesus the Lamb of God - Exodus 12: exodus-12
+    - Jesus’ many holy names - Deuteronomy 5:11: deuteronomy-5.11
+    - Jesus the Kinsmen Redeemer - Ruth 4: ruth-4
+    - Jesus in the names of the gates of Jerusalem - Nehemiah 3: nehemiah-3
+    - Jesus the Son of God - Psalm 2: psalm-2
+    - Jesus the Suffering Servant - Psalm 22: psalm-22
+    - Jesus the Good Shepherd - Psalm 23: psalm-23
+    - Jesus the King of Glory - Psalm 24: psalm-24
+    - Jesus the King of Kings - Psalm 72: psalm-72
+    - Jesus the Messiah and High Priest - Psalm 110: psalm-110
+    - Jesus the Chief Cornerstone - Psalm 118: psalm-118
+    - Jesus the Prince of Peace - Psalm 122: psalm-122
+    - Jesus the Creator - Psalm 148: psalm-148
+    - Jesus the End Times Redeemer - Psalm 149: psalm-149
     - The foreshadow of Jesus as the Chief Cornerstone - Psalm 118: psalm-118
     - The foreshadow of Jesus as the Prince of Peace - Psalm 122: psalm-122
+    - The foreshadow of Jesus as the Creator  - Psalm 148: psalm-148
+    - The foreshadow of Jesus as the Redeemer - Psalm 149: psalm-149
 Attributes of God:
   God's Old Testament Covenants:
     - The Noah Covenant - Genesis 9: genesis-9
@@ -548,6 +574,7 @@ Attributes of God:
     - God's faithfulness in freeing the Jews from captivity - Ezra 1: ezra-1
     - Lessons about God from the Davidic Covenant - Psalm 89: psalm-89
     - God’s faithfulness to Israel - Psalm 105: psalm-105
+    - Lessons for responding to God’s faithfulness - Psalm 147: psalm-147
   God's Mercy and Grace:
     - God's mercy and grace on Jacob's family - Genesis 49: genesis-49
     - God's mercy and grace after the Jews six rebellions - Exodus 17: exodus-17
@@ -570,6 +597,7 @@ Attributes of God:
     - How to respond to God’s mercy - Psalm 31: psalm-31
     - God’s mercy and grace in response to our sins - Psalm 36: psalm-36
     - David’s praise for God’s mercy and grace - Psalm 103: psalm-103
+    - Praising God’s Covenant “Hesed” (mercy, love, and faithfulness) - Psalm 136: psalm-136
   God's Justice:
     - Principles of divine justice (Part I) - Exodus 21: exodus-21
     - Principles of divine justice (Part I) - Exodus 22: exodus-22
@@ -616,6 +644,7 @@ Attributes of God:
     - What God is owed because of His deliverance - Psalm 76: psalm-76
     - Praising Jesus for His deliverance of Israel - Psalm 107: psalm-107
     - The protections that God offers you - Psalm 121: psalm-121
+    - Turning to God during ongoing attacks - Psalm 141: psalm-141
   God's Holiness:
     - Honoring God's holiness with a holy life - Leviticus 19: leviticus-19
     - Keeping God's names holy - Deuteronomy 5:11: deuteronomy-5.11
@@ -693,6 +722,8 @@ Attributes of God:
     - How to respond to God’s discipline - Psalm 39: psalm-39
     - Finding hope in God after you sin - Psalm 106: psalm-106
     - Seeking God’s deliverance when He disciplines you - Psalm 109: psalm-109
+    - Finding hope in Jesus when He disciplines you - Psalm 135: psalm-135
+    - Finding encouragement Jesus after sin - Psalm 143: psalm-143
 Apologetics:
   Apologetics Regarding Creation:
     - The days of Genesis explained - Genesis 1(a)(1): genesis-1a.1
@@ -708,7 +739,8 @@ Apologetics:
     - Job reveals gravity and God's expansion of the universe - Job 26: job-26
     - God's love for humanity in His creation - Job 38: job-38
     - Praising God for His creation - Psalm 8: psalm-8
-    - Praising Jesus as the Creator - Psalm 104: psalm-104
+    - Praising Jesus as the Creator (Part I) - Psalm 104: psalm-104
+    - Praising Jesus as the Creator (Part II) - Psalm 148: psalm-148
   Apologetics Regarding the Bible:
     - Proof of the Trinity - Genesis 5: genesis-5
     - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: numbers-2
@@ -746,6 +778,8 @@ End Times:
     - Jesus’ Reign at Mount Zion - Psalm 87: psalm-87
     - Praising Jesus’ promised return as King of Kings - Psalm 97: psalm-97
     - Jesus’ Promised Millennial Reign - Psalm 99: psalm-99
+    - The end times judgment of Babylon - Psalm 137: psalm-137
+    - Jesus the end times redeemer - Psalm 149: psalm-149
   The Rapture of the Church:
     - Enoch's rapture - Genesis 5: genesis-5
     - The rapture foreshadowed in the Egyptian plagues - Exodus 11: exodus-11
