--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "yarn@1.22.21",
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next dev",
     "test": "jest",
     "lint": "next lint"
@@ -14,24 +14,25 @@
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "bootstrap": "^4.5.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.0.0",
-    "next": "12.2.0",
-    "react": "17.0.2",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "17.0.2",
-    "yaml": "^1.10.0"
+    "next": "15.3.2",
+    "react": "19.1.0",
+    "react-bootstrap": "^2.10.6",
+    "react-dom": "19.1.0",
+    "yaml": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@types/jest": "^26.0.17",
-    "babel-jest": "^26.6.3",
-    "eslint": "^8.10.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3"
   }
 }
