feat: add video up to psalm-37

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -145,3 +145,9 @@ psalm-30:
   videoSrc: https://www.youtube.com/embed/ltGB-Yt03bY
 psalm-31:
   videoSrc: https://www.youtube.com/embed/eEZ3mSG3K5Y
+psalm-35:
+  videoSrc: https://www.youtube.com/embed/M5RUkaH7m70
+psalm-36:
+  videoSrc: https://www.youtube.com/embed/s7dXyuLTOGA
+psalm-37:
+  videoSrc: https://www.youtube.com/embed/AXyVKFyj89M
