feat: update videoSrc up to psalm-46

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -149,5 +149,29 @@ psalm-35:
   videoSrc: https://www.youtube.com/embed/M5RUkaH7m70
 psalm-36:
   videoSrc: https://www.youtube.com/embed/s7dXyuLTOGA
+psalm-32:
+  videoSrc: https://www.youtube.com/embed/dxh-AcvImUc
+psalm-33:
+  videoSrc: https://www.youtube.com/embed/DLi1LV3AgIo
+psalm-34:
+  videoSrc: https://www.youtube.com/embed/OdtoOEOSj6I
 psalm-37:
   videoSrc: https://www.youtube.com/embed/AXyVKFyj89M
+psalm-38:
+  videoSrc: https://www.youtube.com/embed/BFTWLaTAz_Y
+psalm-39:
+  videoSrc: https://www.youtube.com/embed/OA4RD5ca0B0
+psalm-40:
+  videoSrc: https://www.youtube.com/embed/kTP245EbGOY
+psalm-41:
+  videoSrc: https://www.youtube.com/embed/VkzFPxZ1_K0
+psalm-42:
+  videoSrc: https://www.youtube.com/embed/HF5lfrPse0g
+psalm-43:
+  videoSrc: https://www.youtube.com/embed/xBoyIp5WZaU
+psalm-44:
+  videoSrc: https://www.youtube.com/embed/hc9wSnTX-bc
+psalm-45:
+  videoSrc: https://www.youtube.com/embed/yzEu7OaKoDs
+psalm-46:
+  videoSrc: https://www.youtube.com/embed/jlKjTf3GN9w
