feat: psalm-50 video links

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -175,3 +175,11 @@ psalm-45:
   videoSrc: https://www.youtube.com/embed/yzEu7OaKoDs
 psalm-46:
   videoSrc: https://www.youtube.com/embed/jlKjTf3GN9w
+psalm-47:
+  videoSrc: https://www.youtube.com/embed/Et9AqU4ToKE
+psalm-48:
+  videoSrc: https://www.youtube.com/embed/RD4D6_nP3dM
+psalm-49:
+  videoSrc: https://www.youtube.com/embed/4cgmnD8DkIY
+psalm-50:
+  videoSrc: https://www.youtube.com/embed/yqR2hF9iSmw
