feat: add psalm 149 and other updates

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -183,3 +183,11 @@ psalm-49:
   videoSrc: https://www.youtube.com/embed/4cgmnD8DkIY
 psalm-50:
   videoSrc: https://www.youtube.com/embed/yqR2hF9iSmw
+psalm-51:
+  videoSrc: https://www.youtube.com/embed/nw1xDSTRH84
+psalm-52:
+  videoSrc: https://www.youtube.com/embed/FnHLrbmPU24
+psalm-53:
+  videoSrc: https://www.youtube.com/embed/9vSP133e-gE
+psalm-54:
+  videoSrc: https://www.youtube.com/embed/YEn5Ir_P_XA
