--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.0.0",
-    "next": "15.4.7",
+    "next": "^16.0.7",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "19.1.0",
@@ -31,7 +31,7 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^16.0.7",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
